[gd_scene load_steps=10 format=3 uid="uid://drcylmyjefmn0"]

[ext_resource type="Script" uid="uid://d3ytuwmimqlg4" path="res://scenes/battle/BattleScene.gd" id="1_vd1me"]
[ext_resource type="Resource" uid="uid://d118t8olbc47a" path="res://data/encounters/first_battle.tres" id="2_q8wks"]
[ext_resource type="PackedScene" uid="uid://cheykuupki7w3" path="res://scenes/battle/BattleGrid.tscn" id="2_t3o3d"]
[ext_resource type="PackedScene" uid="uid://dvvvw8dvuaf0n" path="res://scenes/ui/PlayerHandUI.tscn" id="3_rjp4h"]
[ext_resource type="PackedScene" uid="uid://bykx7qci4fkvl" path="res://scenes/battle/UnitInfoPanel.tscn" id="4_t3o3d"]
[ext_resource type="PackedScene" uid="uid://csfa8idl8266g" path="res://scenes/ui/DeckPileUI.tscn" id="5_nabc4"]
[ext_resource type="PackedScene" uid="uid://pjdtf3hky6c6" path="res://scenes/ui/CardPileViewer.tscn" id="6_q8wks"]
[ext_resource type="PackedScene" uid="uid://ckvi6eu1vd02a" path="res://scenes/ui/DevConsole.tscn" id="8_5282s"]
[ext_resource type="PackedScene" uid="uid://cu6oy5nwloafr" path="res://scenes/ui/PlayerArtifactsUI.tscn" id="8_nnhtb"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_vd1me")
encounter_data = ExtResource("2_q8wks")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="BattleGrid" parent="." instance=ExtResource("2_t3o3d")]
position = Vector2(50, 50)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHandUI" parent="CanvasLayer" instance=ExtResource("3_rjp4h")]
offset_left = 188.0
offset_top = 496.0
offset_right = 996.0
offset_bottom = 624.0

[node name="EndTurnButton" type="Button" parent="CanvasLayer"]
offset_left = 1032.0
offset_top = 16.0
offset_right = 1128.0
offset_bottom = 56.0
text = "Ukončit tah"

[node name="VictoryLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 50
text = "Výhra"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="CanvasLayer"]
offset_top = 448.0
offset_right = 112.0
offset_bottom = 488.0
theme_override_font_sizes/font_size = 25
text = "Energie:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerInfoPanel" parent="CanvasLayer" instance=ExtResource("4_t3o3d")]
offset_left = 8.0
offset_top = 488.0
offset_right = 128.0
offset_bottom = 632.0

[node name="EnemyInfoPanel" parent="CanvasLayer" instance=ExtResource("4_t3o3d")]
offset_left = 1040.0
offset_top = 488.0
offset_right = 1144.0
offset_bottom = 632.0

[node name="DrawPileButton" parent="CanvasLayer" instance=ExtResource("5_nabc4")]
unique_name_in_owner = true
offset_left = 1088.0
offset_top = 312.0
offset_right = 1136.0
offset_bottom = 376.0

[node name="DiscardPileButton" parent="CanvasLayer" instance=ExtResource("5_nabc4")]
unique_name_in_owner = true
offset_left = 1088.0
offset_top = 392.0
offset_right = 1136.0
offset_bottom = 456.0

[node name="CardPileViewer" parent="CanvasLayer" instance=ExtResource("6_q8wks")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.784314)
self_modulate = Color(1, 1, 1, 0.784314)
offset_left = 64.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 448.0

[node name="WinButton" type="Button" parent="CanvasLayer"]
offset_left = 1032.0
offset_top = 72.0
offset_right = 1124.0
offset_bottom = 93.0
text = "Okamžitá výhra"

[node name="PlayerArtifactsUI" parent="CanvasLayer" instance=ExtResource("8_nnhtb")]
offset_left = 320.0
offset_right = 360.0

[node name="DevConsole" parent="." instance=ExtResource("8_5282s")]
visible = false

[connection signal="pressed" from="CanvasLayer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
